# koja

./: .gitignore  .prettierignore  CHANGELOG.md  CONCURRENCY.md  CONCURRENCY_2.md  Cargo.toml  INSTALLING.md  LANGUAGE.md  MEMORY.md  README.md  ROADMAP.md  expo_code_quality_report.md  grammar.ebnf  testing.expo
crates/expo-alpha-ir/: AGENTS.md  Cargo.toml
crates/expo-alpha-ir-eval/: AGENTS.md  Cargo.toml
crates/expo-alpha-ir-eval/src/: error.rs  interpreter.rs  lib.rs  ops.rs  value.rs
crates/expo-alpha-ir-eval/tests/: bitwise.rs  boolean_ops.rs  bounded_dispatch.rs  branches.rs  calls.rs  clone.rs  closures.rs  constants.rs  enums.rs  escape_debug.rs  extern.rs  generic_functions.rs  generics.rs  interpreter.rs  intrinsics.rs  kernel.rs  loops.rs  match_nested.rs  ops.rs  structs.rs  tail_calls.rs  two_plus_two.rs  unions.rs
crates/expo-alpha-ir-llvm/: Cargo.toml
crates/expo-alpha-ir-llvm/src/: compiler.rs  constant_pool.rs  ctx.rs  emit.rs  function.rs  layout.rs  lib.rs  lower.rs  main_wrapper.rs  object.rs  program.rs  runtime.rs  script.rs  types.rs
crates/expo-alpha-ir-llvm/tests/: bitwise.rs  closures.rs  control_flow.rs  emit.rs  enums.rs  escape_debug.rs  extern.rs  generics.rs  intrinsics.rs  locals.rs  loops.rs  match_nested.rs  process.rs  program.rs  script.rs  structs.rs  tail_calls.rs
crates/expo-alpha-ir/src/: cfg.rs  constant.rs  cycle.rs  dominators.rs  enum_decl.rs  extern_attrs.rs  function.rs  intrinsic_id.rs  lib.rs  local.rs  lower_package.rs  lower_script.rs  mangling.rs  merge.rs  ownership.rs  package.rs  program.rs  script.rs  seal.rs  struct_decl.rs  tail_calls.rs  types.rs  union_decl.rs
crates/expo-alpha-ir/tests/: boolean_ops.rs  bounded_dispatch.rs  branches.rs  calls.rs  constants.rs  extern.rs  generic_functions.rs  generics.rs  lower_body.rs  lower_closures.rs  lower_concat.rs  lower_control_flow.rs  lower_drops.rs  lower_enums.rs  lower_expr.rs  lower_failures.rs  lower_intrinsics.rs  lower_locals.rs  lower_loops.rs  lower_match.rs  lower_ops.rs  lower_ownership.rs  lower_package.rs  lower_process.rs  lower_strings.rs  lower_structs.rs  opaque_debug_receivers.rs  two_plus_two.rs
crates/expo-alpha-shell/: AGENTS.md  Cargo.toml
crates/expo-alpha-shell/src/: lib.rs
crates/expo-codegen/: AGENTS.md  Cargo.toml
crates/expo-codegen/src/: builtins.rs  calls.rs  compiler.rs  control.rs  debug.rs  debug_info.rs  drop.rs  enums.rs  expr.rs  generics.rs  hashtable.rs  lib.rs  list.rs  map.rs  ops.rs  process.rs  registration.rs  set.rs  spawn.rs  stmt.rs  strings.rs  structs.rs  types.rs  util.rs
crates/expo-driver/: AGENTS.md  Cargo.toml  build.rs
crates/expo-driver/src/: alpha.rs  commands.rs  diagnostics.rs  link.rs  main.rs  pipeline.rs  project.rs  resolve.rs  serve.rs
crates/expo-driver/std/: kernel.expo
crates/expo-driver/tests/: alpha_cli.rs  alpha_two_plus_two.rs  doc_bundle.rs  lang_suite.rs
crates/expo-ir/: AGENTS.md  Cargo.toml
crates/expo-ir-eval/: AGENTS.md  Cargo.toml
crates/expo-ir-eval-v2/: AGENTS.md  Cargo.toml
crates/expo-ir-eval-v2/src/: error.rs  interpreter.rs  lib.rs  value.rs
crates/expo-ir-eval-v2/tests/: two_plus_two.rs
crates/expo-ir-eval/src/: aggregates.rs  binary.rs  concat.rs  constants.rs  control.rs  error.rs  format.rs  frame.rs  interp.rs  interpreter.rs  lib.rs  ops.rs  pattern.rs  value.rs
crates/expo-ir-eval/tests/: binary_literal.rs  bitwise.rs  bounded_dispatch.rs  clone.rs  closures.rs  constants.rs  control_flow.rs  cptr.rs  enums.rs  escape_debug.rs  extern.rs  field_assignment.rs  functions.rs  generic_functions.rs  generics.rs  interpreter.rs  intrinsics.rs  kernel.rs  literals.rs  locals.rs  loops.rs  match_nested.rs  operators.rs  ops.rs  parse.rs  random.rs  structs.rs  tail_calls.rs  time.rs  unions.rs
crates/expo-ir-llvm/: Cargo.toml
crates/expo-ir-llvm/src/: constant_pool.rs  ctx.rs  error.rs  function.rs  layout.rs  lib.rs  main_wrapper.rs  object.rs  program.rs  runtime.rs  script.rs  types.rs
crates/expo-ir-llvm/tests/: binary_match.rs  bitwise.rs  clone.rs  closures.rs  control_flow.rs  enums.rs  escape_debug.rs  extern.rs  field_assignment.rs  generic_functions.rs  generics.rs  intrinsics.rs  locals.rs  loops.rs  match_nested.rs  process.rs  program.rs  script.rs  structs.rs  tail_calls.rs  time.rs  unions.rs
crates/expo-ir-v2/: AGENTS.md  Cargo.toml
crates/expo-ir-v2/src/: closure.rs  elaborate.rs  lib.rs  lower_package.rs  package.rs  program.rs  seal.rs  types.rs
crates/expo-ir-v2/tests/: two_plus_two.rs
crates/expo-ir/src/: backend.rs  blocks.rs  cfg.rs  constants.rs  dominators.rs  elaborate.rs  error.rs  extern_attrs.rs  file.rs  fn_state.rs  function.rs  identity.rs  instruction.rs  intrinsic_id.rs  lib.rs  mangling.rs  ownership.rs  package.rs  program.rs  script.rs  struct_decl.rs  type_layouts.rs  types.rs  union_decl.rs  util.rs  values.rs
crates/expo-ir/tests/: bounded_dispatch.rs  constants.rs  doc_annotations.rs  extern.rs  generic_functions.rs  generics.rs  lower_binary_literal.rs  lower_body.rs  lower_clone.rs  lower_closures.rs  lower_concat.rs  lower_control_flow.rs  lower_drops.rs  lower_enums.rs  lower_expr.rs  lower_field_assignment.rs  lower_intrinsics.rs  lower_list.rs  lower_locals.rs  lower_loops.rs  lower_match.rs  lower_ops.rs  lower_ownership.rs  lower_package.rs  lower_process.rs  (+6 more)
crates/expo-lsp/: AGENTS.md  Cargo.toml
crates/expo-parser/: AGENTS.md  Cargo.toml
crates/expo-preprocess/: Cargo.toml
crates/expo-shell/: AGENTS.md  Cargo.toml
crates/expo-typecheck/: AGENTS.md  Cargo.toml
crates/koja-driver/: AGENTS.md  Cargo.toml  build.rs
crates/koja-fmt/: AGENTS.md  Cargo.toml
crates/koja-ir/: AGENTS.md  Cargo.toml
crates/koja-ir-eval/: AGENTS.md  Cargo.toml
crates/koja-ir-llvm/: Cargo.toml
crates/koja-lsp/: AGENTS.md  Cargo.toml
crates/koja-parser/: AGENTS.md  Cargo.toml
crates/koja-runtime/: AGENTS.md  Cargo.toml  build.rs
crates/koja-runtime-posix/: AGENTS.md  Cargo.toml  build.rs  tsan.supp
crates/koja-shell/: AGENTS.md  Cargo.toml
crates/koja-typecheck/: AGENTS.md  Cargo.toml
(+2350 files in other folders)
