[workspace]
resolver = "2"
members = [
    "crates/expo-ast",
    "crates/expo-doc",
    "crates/expo-driver",
    "crates/expo-fmt",
    "crates/expo-ir",
    "crates/expo-ir-eval",
    "crates/expo-ir-llvm",
    "crates/expo-lexer",
    "crates/expo-lsp",
    "crates/expo-parser",
    "crates/expo-runtime",
    "crates/expo-shell",
    "crates/expo-stdlib",
    "crates/expo-test",
    "crates/expo-typecheck",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.9.0"
