[workspace]
resolver = "2"
members = [
    "crates/koja-ast",
    "crates/koja-doc",
    "crates/koja-driver",
    "crates/koja-fmt",
    "crates/koja-ir",
    "crates/koja-ir-eval",
    "crates/koja-ir-llvm",
    "crates/koja-lexer",
    "crates/koja-lsp",
    "crates/koja-parser",
    "crates/koja-runtime",
    "crates/koja-shell",
    "crates/koja-stdlib",
    "crates/koja-test",
    "crates/koja-typecheck",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.11.0"
