[workspace]
resolver = "2"
members = [
    "crates/koja-ast",
    "crates/koja-doc",
    "crates/koja-driver",
    "crates/koja-fmt",
    "crates/koja-ir",
    "crates/koja-ir-eval",
    "crates/koja-ir-llvm",
    "crates/koja-lexer",
    "crates/koja-lsp",
    "crates/koja-parser",
    "crates/koja-runtime-core",
    "crates/koja-runtime-posix",
    "crates/koja-shell",
    "crates/koja-stdlib",
    "crates/koja-test",
    "crates/koja-typecheck",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.15.2"

# Optimize the runtime even in dev builds so `cargo test` exercises the
# same codegen the shipped release runtime gets. The worker-migration
# TLS-caching crash (see the note in koja-runtime-posix/src/scheduler.rs)
# only manifests when the optimizer caches TLS bases across context
# switches, which -O0 never does, so an unoptimized runtime cannot cover
# that class of bug. Debug assertions stay enabled.
[profile.dev.package.koja-runtime-posix]
opt-level = 3
