[package]
name = "expo-alpha-ir-eval"
description = "Tree-walking interpreter for sealed expo-alpha-ir IRPrograms"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-alpha-ir = { path = "../expo-alpha-ir" }
expo-ast = { path = "../expo-ast" }

[dev-dependencies]
expo-alpha-typecheck = { path = "../expo-alpha-typecheck" }
expo-parser = { path = "../expo-parser" }
