[package]
name = "expo-alpha-ir"
description = "Sealed IRProgram lowering for the alpha pipeline"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-alpha-typecheck = { path = "../expo-alpha-typecheck" }
expo-ast = { path = "../expo-ast" }

[dev-dependencies]
expo-parser = { path = "../expo-parser" }
