[package]
name = "expo-alpha-shell"
description = "Interactive REPL for the alpha pipeline"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-alpha-ir = { path = "../expo-alpha-ir" }
expo-alpha-ir-eval = { path = "../expo-alpha-ir-eval" }
expo-alpha-typecheck = { path = "../expo-alpha-typecheck" }
expo-ast = { path = "../expo-ast" }
expo-lexer = { path = "../expo-lexer" }
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
