[package]
name = "expo-driver"
description = "CLI frontend for the Expo language compiler"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "expo"
path = "src/main.rs"

[dependencies]
expo-runtime = { path = "../expo-runtime" }
boring-sys = { version = "5", default-features = false }
expo-ast = { path = "../expo-ast" }
expo-codegen = { path = "../expo-codegen" }
expo-doc = { path = "../expo-doc" }
expo-fmt = { path = "../expo-fmt" }
expo-ir-eval-v2 = { path = "../expo-ir-eval-v2" }
expo-ir-v2 = { path = "../expo-ir-v2" }
expo-lexer = { path = "../expo-lexer" }
expo-parser = { path = "../expo-parser" }
expo-shell = { path = "../expo-shell" }
expo-stdlib = { path = "../expo-stdlib" }
expo-typecheck = { path = "../expo-typecheck" }
expo-typecheck-v2 = { path = "../expo-typecheck-v2" }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
libc = "0.2"
