[package]
name = "expo-driver"
description = "CLI frontend for the Expo language compiler"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "expo"
path = "src/main.rs"

[dependencies]
expo-runtime = { path = "../expo-runtime" }
boring-sys = { version = "5", default-features = false }
expo-alpha-ir = { path = "../expo-alpha-ir" }
expo-alpha-ir-eval = { path = "../expo-alpha-ir-eval" }
expo-alpha-ir-llvm = { path = "../expo-alpha-ir-llvm" }
expo-alpha-shell = { path = "../expo-alpha-shell" }
expo-alpha-typecheck = { path = "../expo-alpha-typecheck" }
expo-ast = { path = "../expo-ast" }
expo-codegen = { path = "../expo-codegen" }
expo-doc = { path = "../expo-doc" }
expo-fmt = { path = "../expo-fmt" }
expo-lexer = { path = "../expo-lexer" }
expo-parser = { path = "../expo-parser" }
expo-shell = { path = "../expo-shell" }
expo-stdlib = { path = "../expo-stdlib" }
expo-test = { path = "../expo-test" }
expo-typecheck = { path = "../expo-typecheck" }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
libc = "0.2"
