[package]
name = "expo-driver"
description = "CLI frontend for the Expo language compiler"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "expo"
path = "src/main.rs"

[dependencies]
boring-sys = { version = "5", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
expo-ast = { path = "../expo-ast" }
expo-doc = { path = "../expo-doc" }
expo-fmt = { path = "../expo-fmt" }
expo-ir = { path = "../expo-ir" }
expo-ir-eval = { path = "../expo-ir-eval" }
expo-ir-llvm = { path = "../expo-ir-llvm" }
expo-lexer = { path = "../expo-lexer" }
expo-parser = { path = "../expo-parser" }
expo-runtime = { path = "../expo-runtime" }
expo-shell = { path = "../expo-shell" }
expo-stdlib = { path = "../expo-stdlib" }
expo-test = { path = "../expo-test" }
expo-typecheck = { path = "../expo-typecheck" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
libc = "0.2"
