[package]
name = "expo-ir-eval-v2"
description = "Tree-walking interpreter for sealed expo-ir-v2 IRPrograms"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ir-v2 = { path = "../expo-ir-v2" }

[dev-dependencies]
expo-ast = { path = "../expo-ast" }
expo-parser = { path = "../expo-parser" }
expo-typecheck-v2 = { path = "../expo-typecheck-v2" }
