[package]
name = "expo-ir-eval"
description = "Tree-walking interpreter backend for ExpoIR"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-ir = { path = "../expo-ir" }
expo-typecheck = { path = "../expo-typecheck" }

[dev-dependencies]
expo-codegen = { path = "../expo-codegen" }
expo-lexer = { path = "../expo-lexer" }
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
