[package]
name = "expo-ir-eval"
description = "Tree-walking interpreter for sealed expo-ir IRPrograms"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ir = { path = "../expo-ir" }
expo-runtime = { path = "../expo-runtime" }

[dev-dependencies]
expo-ast = { path = "../expo-ast" }
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
expo-typecheck = { path = "../expo-typecheck" }
