[package]
name = "expo-ir-llvm"
description = "LLVM backend for sealed expo-ir IRPrograms"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ir = { path = "../expo-ir" }
inkwell = { version = "0.8", features = ["llvm18-1"] }

[dev-dependencies]
expo-ast = { path = "../expo-ast" }
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
expo-typecheck = { path = "../expo-typecheck" }
