[package]
name = "expo-ir-v2"
description = "Sealed IRProgram lowering (v2 northstar pipeline)"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-typecheck-v2 = { path = "../expo-typecheck-v2" }

[dev-dependencies]
expo-parser = { path = "../expo-parser" }
