[package]
name = "expo-ir"
description = "Sealed IRProgram lowering"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-typecheck = { path = "../expo-typecheck" }

[dev-dependencies]
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
