[package]
name = "expo-lsp"
description = "Language Server Protocol implementation for the Expo language"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "expo-lsp"
path = "src/main.rs"

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-fmt = { path = "../expo-fmt" }
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
expo-typecheck = { path = "../expo-typecheck" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-lsp-server = "0.23"
