[package]
name = "expo-parser"
description = "Recursive descent parser for the Expo language"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-lexer = { path = "../expo-lexer" }

[dev-dependencies]
proptest = "1.11.0"
