[package]
name = "expo-preprocess"
description = "AST-level preprocessing passes (auto-derive, future cfg pruning) for the Expo language"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }

[dev-dependencies]
expo-parser = { path = "../expo-parser" }
