[package]
name = "expo-shell"
description = "Interactive REPL"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-ir = { path = "../expo-ir" }
expo-ir-eval = { path = "../expo-ir-eval" }
expo-lexer = { path = "../expo-lexer" }
expo-parser = { path = "../expo-parser" }
expo-stdlib = { path = "../expo-stdlib" }
expo-typecheck = { path = "../expo-typecheck" }
rustyline = { version = "18.0.0", features = ["derive"] }
