[package]
name = "expo-typecheck"
description = "Sealed-AST typechecker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
expo-ast = { path = "../expo-ast" }
expo-parser = { path = "../expo-parser" }

[dev-dependencies]
expo-stdlib = { path = "../expo-stdlib" }
