[package]
name = "koja-ir-eval"
description = "Tree-walking interpreter for sealed koja-ir IRPrograms"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
boring-sys = { version = "5", default-features = false }
koja-ir = { path = "../koja-ir" }
koja-runtime-posix = { path = "../koja-runtime-posix" }

[dev-dependencies]
koja-ast = { path = "../koja-ast" }
koja-parser = { path = "../koja-parser" }
koja-stdlib = { path = "../koja-stdlib" }
koja-typecheck = { path = "../koja-typecheck" }
