[package]
name = "koja-runtime-posix"
description = "POSIX (threads + asm) implementation of the Koja scheduler protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
# Package renamed to `koja-runtime-posix`, but the staticlib stays
# `libkoja_runtime.a` so the `-lkoja_runtime` linker contract and the
# `koja-driver` embedding are untouched.
name = "koja_runtime"
crate-type = ["rlib", "staticlib"]

[lints.rust]
# `koja_tsan` gates the ThreadSanitizer fiber annotations in the scheduler;
# it is set only by the `just tsan` recipe (see justfile).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(koja_tsan)'] }

[dependencies]
backtrace = "0.3"
koja-runtime-core = { path = "../koja-runtime-core" }
libc = "0.2"
polling = "3"

[build-dependencies]
cc = "1"
