[package]
name = "koja-runtime"
description = "Lightweight process runtime for the Koja language"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[lints.rust]
# `koja_tsan` gates the ThreadSanitizer fiber annotations in the scheduler;
# it is set only by the `just tsan` recipe (see justfile).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(koja_tsan)'] }

[dependencies]
backtrace = "0.3"
koja-runtime-core = { path = "../koja-runtime-core" }
libc = "0.2"
polling = "3"

[build-dependencies]
cc = "1"
